스프링부트 연결 해결필요

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,4 +9,4 @@ server.port =8071
 mybatis.config=com.example.projectback.config.MyBatisConfig.java
 mybatis.mapper-locations: mybatis/mapper/*.xml
 
-server.servlet.context-path = /crud
+# server.servlet.context-path = /crud
